# betalab

./: .env  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: experiments.py
backend/app/api/experiment_routes/: __init__.py  analytical_balance.py  common.py  core.py  gross_balance.py  rack.py  reception.py  trash.py  workbench.py  workspace.py
backend/app/core/: config.py
backend/app/domain/: models.py  rules.py  workbench_catalog.py
backend/app/schemas/: experiment.py
backend/app/services/: commands.py  cryogenic_simulation_service.py  experiment_factory.py  experiment_repository.py  experiment_service.py  experiment_service_workbench.py  physical_simulation_service.py  produce_lot_transfer.py  received_sample_generation.py  simulation_service.py  transfer.py  wikigache_duplicates.py
backend/app/services/command_handlers/: debug.py  gross_balance.py  rack.py  reception.py  support.py  trash.py  workbench.py  workbench_labels.py  workbench_liquids.py  workbench_materials.py  workbench_shared.py  workspace.py
backend/app/services/domain_services/: analytical_balance.py  base.py  debug.py  gross_balance.py  rack.py  reception.py  trash.py  workbench.py  workspace.py
backend/app/services/helpers/: lookups.py  produce_canonical.py  produce_material_states.py  tool_liquids.py  workbench.py
backend/tests/: conftest.py  test_analytical_balance.py  test_api.py  test_experiment_service.py  test_label_and_liquid_dnd_matrix.py  test_powder_impurities.py  test_produce_canonical.py  test_produce_lot_dnd_matrix.py  test_produce_lot_transfer.py  test_spatula_canonical.py  test_tool_dnd_matrix.py
(+157 files in other folders)
