[project]
name = "betalab-backend"
version = "0.1.0"
description = "FastAPI simulation backend for LC-MS/MS educational workflows"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.9.0",
  "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "httpx>=0.28.0",
  "pyright>=1.1.400",
  "ruff>=0.11.0",
]

[tool.ruff]
line-length = 150
target-version = "py311"

[tool.ruff.lint]
select = [
  "F",   # pyflakes
  "I",   # isort
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "RUF", # ruff-specific rules
]
ignore = [
  "E501", # line too long — not enforced, wide screens
]

[tool.pyright]
include = ["app", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
